Fix Safari alignment issues

--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -2,6 +2,7 @@
   display: flex;
   min-height: 100vh;
   justify-content: center;
+  margin: 0 3rem;
 }
 
 .main h1 {
@@ -19,6 +20,7 @@
   display: flex;
   flex-direction: row-reverse;
   justify-content: center;
+  gap: 3rem;
 }
 
 .title {
@@ -37,6 +39,10 @@
   font-size: 1rem;
   margin: 0;
   margin-bottom: 1rem;
+}
+
+.grid > div {
+  width: max-content;
 }
 
 .grid > hr {
@@ -65,7 +71,7 @@
   justify-content: center;
   align-items: center;
   position: relative;
-  margin: 3rem 0 0 6rem;
+  margin: 3rem 0 0 0;
   min-height: 30vh;
   min-width: 50vw;
 }
@@ -101,7 +107,7 @@
   }
 
   .center{
-    margin: 2rem;
+    margin: 2rem 0;
   }
   .grid {
     margin-top: 0;
